--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.2.3",
+    "@codemirror/language-data": "^6.3.1",
+    "@codemirror/legacy-modes": "^6.3.3",
+    "@uiw/react-codemirror": "^4.21.21",
+    "axios": "^1.6.2",
+    "js-cookie": "^3.0.5",
+    "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-select": "^5.8.0",
+    "reactstrap": "^9.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
